@@ -1,7 +1,7 @@
 [tox]
 envlist =
     py{36,27}-normal-hypothesis
-    py{35,34,33,26,py}-normal
+    py{35,34,py}-normal
     py{36,27}-uwsgi
     py36-stylecheck
     docs-html
@@ -14,7 +14,10 @@ setenv =
 
 usedevelop = true
 deps =
-    normal,uwsgi: pytest>=3
+    # remove once we drop support for 2.6, 3.3
+    py26,py33: py<1.5
+    py26,py33: pytest<3.3
+
     normal,uwsgi: pytest-xprocess
     normal,uwsgi: requests
     normal,uwsgi: coverage
@@ -67,8 +70,6 @@ passenv = CI TRAVIS TRAVIS_*
 deps = codecov
 skip_install = true
 commands =
-    # install argparse for 2.6
-    python -c 'import sys, pip; sys.version_info < (2, 7) and pip.main(["install", "argparse", "-q"])'
     coverage combine
     coverage report
     codecov
